--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           <span class="title-studios">JS</span>
         </h1>
         <h1>
-          <span class="title-studios">With Netlify</span>
-          <span class="title-studios">CLI</span>
+          <span class="title-studios">Testing CD</span>
         </h1>
         <h2>
           Reduce the file size of your project down to 50%, <br />
