--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="A demo site to use with Netlify Drop" />
     <meta name="keywords" content="Thanos, JavaScript, Paradoy, Netlify Drop" />
     <meta name="author" content="Rafael Conde" />
+    <script type="module" src="./index.js"></script>
 
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -25,7 +26,7 @@
           <span class="title-studios">JS</span>
         </h1>
         <h1>
-          <span class="title-studios">Testing CD</span>
+          <div id="app"></div>
         </h1>
         <h2>
           Reduce the file size of your project down to 50%, <br />
